# os_labs

./: .gitignore  README.md
lab1/: .gitignore  README.md
lab1/child/: CMakeLists.txt
lab1/child/child/: child.c
lab1/docs/: 210_Попов_Лаб1.docx
lab1/libio/libio/: io.c  io.h
lab1/parent/: CMakeLists.txt
lab1/parent/parent/: parent.c  processes.c  processes.h
lab2/lab2/: CMakeLists.txt
lab2/lab2/lab2/: main.c
lab2/liblab2/: CMakeLists.txt
lab2/liblab2/liblab2/: points.c  points.h  thread.h
lab2/liblab2/liblab2/triangle_thread/: triangle_args.c  triangle_args.h  triangle_task.c  triangle_task.h  triangle_thead.c  triangle_thead.h
lab2/libstruct/: CMakeLists.txt
lab2/libstruct/libstruct/concurrent/: queue.c  queue.h
lab3/: .gdbinit  CMakeLists.txt  README.md
lab3/child/child/: child.c
lab3/docs/: 210_Попов_Лаб2.docx
lab3/libconfig/libconfig/: config.h
lab3/libio/: CMakeLists.txt
lab3/libio/libio/shared/: shared.c  shared.h  types.h
lab3/parent/parent/: parent.c  processes.c  processes.h
lab4/: CMakeLists.txt  Dockerfile  Makefile
lab4/alloc/: CMakeLists.txt
lab4/alloc/alloc/: main.c  timer.c  timer.h
lab4/cmake/: lib.cmake
lab4/docs/: 210_Попов_Лаб2.docx
lab4/liballoc-buddy/: CMakeLists.txt
lab4/liballoc-buddy/liballoc/buddy/: alloc.c  alloc.h  buddy.c  buddy.h
lab4/liballoc-fallback/: CMakeLists.txt
lab4/liballoc-fallback/liballoc/: alloc.c  alloc.h  fallback.c  freeblocks.c
lab4/liballoc-freeblocks/: CMakeLists.txt
lab4/liballoc-freeblocks/liballoc/freeblocks/: alloc.h  freeblocks.c  freeblocks.h
lab4/libconfig/: CMakeLists.txt
lab4/libio/libio/shared/: shared.c  types.h
